...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jokr.propermock.ui.detail.DetailActivity">


    <ImageView
        android:id="@+id/raceBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="centerCrop"
        android:background="#BF3c0050"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Race date"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/raceName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="18dp"
...
