<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/raceItemRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="2dp">

    <ImageView
        android:id="@+id/raceBackgroundImage"
...
